After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745306 - Fix crash when receiving a NULL string from DOM bindings
Fix crash when receiving a NULL string from DOM bindings
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-02-27 19:13 UTC by Michael Catanzaro
Modified: 2015-02-28 16:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix crash when receiving a NULL string from DOM bindings (2.13 KB, patch)
2015-02-27 19:13 UTC, Michael Catanzaro
committed Details | Review

Description Michael Catanzaro 2015-02-27 19:13:37 UTC
ephy_web_dom_utils_find_form_auth_elements assumes DOM bindings never return NULL strings, but they do since 2.6.5
Comment 1 Michael Catanzaro 2015-02-27 19:13:40 UTC
Created attachment 298122 [details] [review]
Fix crash when receiving a NULL string from DOM bindings

As of WebKitGTK+ 2.6.5: "Object DOM bindings API now correctly returns
NULL intead of empty strings to be able to differentiate between not
present and present but empty."

This was causing crashes on e.g.
http://www.publico.pt/local/noticia/sindicato-anuncia-adiamento-de-greve-no-metro-de-lisboa-1687386
Comment 2 Carlos Garcia Campos 2015-02-28 08:30:51 UTC
Comment on attachment 298122 [details] [review]
Fix crash when receiving a NULL string from DOM bindings

Thanks!
Comment 3 Michael Catanzaro 2015-02-28 16:43:24 UTC
Attachment 298122 [details] pushed as 4e2f394 - Fix crash when receiving a NULL string from DOM bindings