Fix crash when receiving a NULL string from DOM bindings

As of WebKitGTK+ 2.6.5: "Object DOM bindings API now correctly returns
NULL intead of empty strings to be able to differentiate between not
present and present but empty."

This was causing crashes on e.g.
http://www.publico.pt/local/noticia/sindicato-anuncia-adiamento-de-greve-no-metro-de-lisboa-1687386

https://bugzilla.gnome.org/show_bug.cgi?id=745306